[gd_scene load_steps=64 format=2]

[ext_resource path="res://Imagens/Background.png" type="Texture" id=1]
[ext_resource path="res://Imagens/profile.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Agenda.gd" type="Script" id=3]
[ext_resource path="res://Fontes/Poppins-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Temas/labelkk.tres" type="Theme" id=5]
[ext_resource path="res://Temas/buttonkk.tres" type="Theme" id=6]
[ext_resource path="res://Temas/Lineeditfnova.tres" type="Theme" id=7]
[ext_resource path="res://Temas/Agendalabel.tres" type="Theme" id=8]
[ext_resource path="res://Temas/Patientslebel.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=52]
size = 45
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=44]
Label/colors/font_color = Color( 0.207843, 0.207843, 0.207843, 1 )
Label/fonts/font = SubResource( 52 )

[sub_resource type="DynamicFont" id=54]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=55]
Label/fonts/font = SubResource( 54 )

[sub_resource type="DynamicFont" id=56]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=57]
Label/fonts/font = SubResource( 56 )

[sub_resource type="DynamicFont" id=58]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=59]

[sub_resource type="StyleBoxEmpty" id=60]

[sub_resource type="StyleBoxEmpty" id=61]

[sub_resource type="StyleBoxEmpty" id=62]

[sub_resource type="StyleBoxEmpty" id=63]

[sub_resource type="Theme" id=64]
Button/colors/font_color_hover = Color( 0, 0.619608, 1, 1 )
Button/colors/font_color_pressed = Color( 0, 0.305882, 0.494118, 1 )
Button/fonts/font = SubResource( 58 )
Button/styles/disabled = SubResource( 59 )
Button/styles/focus = SubResource( 60 )
Button/styles/hover = SubResource( 61 )
Button/styles/normal = SubResource( 62 )
Button/styles/pressed = SubResource( 63 )

[sub_resource type="DynamicFont" id=65]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=66]

[sub_resource type="StyleBoxEmpty" id=67]

[sub_resource type="StyleBoxEmpty" id=68]

[sub_resource type="StyleBoxEmpty" id=69]

[sub_resource type="StyleBoxEmpty" id=70]

[sub_resource type="DynamicFont" id=71]

[sub_resource type="Theme" id=72]
default_font = SubResource( 71 )
Button/colors/font_color_hover = Color( 0, 0.619608, 1, 1 )
Button/colors/font_color_pressed = Color( 0, 0.305882, 0.494118, 1 )
Button/fonts/font = SubResource( 65 )
Button/styles/disabled = SubResource( 66 )
Button/styles/focus = SubResource( 67 )
Button/styles/hover = SubResource( 68 )
Button/styles/normal = SubResource( 69 )
Button/styles/pressed = SubResource( 70 )

[sub_resource type="DynamicFont" id=73]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=74]

[sub_resource type="StyleBoxEmpty" id=75]

[sub_resource type="StyleBoxEmpty" id=76]

[sub_resource type="StyleBoxEmpty" id=77]

[sub_resource type="StyleBoxEmpty" id=78]

[sub_resource type="Theme" id=79]
Button/colors/font_color_hover = Color( 0, 0.619608, 1, 1 )
Button/colors/font_color_pressed = Color( 0, 0.305882, 0.494118, 1 )
Button/fonts/font = SubResource( 73 )
Button/styles/disabled = SubResource( 74 )
Button/styles/focus = SubResource( 75 )
Button/styles/hover = SubResource( 76 )
Button/styles/normal = SubResource( 77 )
Button/styles/pressed = SubResource( 78 )

[sub_resource type="DynamicFont" id=80]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=81]

[sub_resource type="StyleBoxEmpty" id=82]

[sub_resource type="StyleBoxEmpty" id=83]

[sub_resource type="StyleBoxEmpty" id=84]

[sub_resource type="StyleBoxEmpty" id=85]

[sub_resource type="Theme" id=86]
Button/colors/font_color_hover = Color( 0, 0.619608, 1, 1 )
Button/colors/font_color_pressed = Color( 0, 0.305882, 0.494118, 1 )
Button/fonts/font = SubResource( 80 )
Button/styles/disabled = SubResource( 81 )
Button/styles/focus = SubResource( 82 )
Button/styles/hover = SubResource( 83 )
Button/styles/normal = SubResource( 84 )
Button/styles/pressed = SubResource( 85 )

[sub_resource type="DynamicFont" id=87]
size = 40
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=88]

[sub_resource type="StyleBoxEmpty" id=89]

[sub_resource type="StyleBoxEmpty" id=90]

[sub_resource type="StyleBoxEmpty" id=91]

[sub_resource type="StyleBoxEmpty" id=92]

[sub_resource type="Theme" id=93]
Button/colors/font_color_hover = Color( 0, 0.619608, 1, 1 )
Button/colors/font_color_pressed = Color( 0, 0.305882, 0.494118, 1 )
Button/fonts/font = SubResource( 87 )
Button/styles/disabled = SubResource( 88 )
Button/styles/focus = SubResource( 89 )
Button/styles/hover = SubResource( 90 )
Button/styles/normal = SubResource( 91 )
Button/styles/pressed = SubResource( 92 )

[sub_resource type="DynamicFont" id=94]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=97]

[sub_resource type="StyleBoxEmpty" id=98]

[sub_resource type="StyleBoxFlat" id=99]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0.305882, 0.494118, 1 )
border_blend = true

[sub_resource type="StyleBoxEmpty" id=100]

[sub_resource type="Theme" id=96]
OptionButton/fonts/font = SubResource( 94 )
OptionButton/styles/focus = SubResource( 97 )
OptionButton/styles/hover = SubResource( 98 )
OptionButton/styles/normal = SubResource( 99 )
OptionButton/styles/pressed = SubResource( 100 )

[sub_resource type="StyleBoxEmpty" id=101]

[sub_resource type="StyleBoxEmpty" id=102]

[sub_resource type="StyleBoxEmpty" id=103]

[sub_resource type="StyleBoxEmpty" id=104]

[sub_resource type="StyleBoxEmpty" id=105]

[sub_resource type="Theme" id=106]
Button/styles/disabled = SubResource( 101 )
Button/styles/focus = SubResource( 102 )
Button/styles/hover = SubResource( 103 )
Button/styles/normal = SubResource( 104 )
Button/styles/pressed = SubResource( 105 )

[node name="Gerenciamento" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -720, -255 )
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
texture = ExtResource( 1 )
stretch_mode = 1

[node name="LabelGer4" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -630.0
margin_top = -75.0
margin_right = -16.0
margin_bottom = -11.0
theme = SubResource( 44 )
text = "Pressione \"esc\" para voltar"

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -122.0
margin_top = 29.0
margin_right = -29.0
margin_bottom = 143.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="LabelGer6" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 653.0
margin_top = 39.0
margin_right = 826.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 330, 70 )
theme = SubResource( 55 )
text = "4Bytes"
align = 1

[node name="LabelGer5" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 546.0
margin_top = 39.0
margin_right = 642.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 330, 70 )
theme = SubResource( 57 )
text = "Olá,"
align = 1

[node name="ButtonAgenda" type="Button" parent="."]
margin_left = 72.0
margin_top = 445.0
margin_right = 327.0
margin_bottom = 501.0
focus_mode = 0
theme = SubResource( 64 )
enabled_focus_mode = 0
text = "Agenda"
align = 0

[node name="ButtonPatients" type="Button" parent="."]
margin_left = 69.0
margin_top = 309.0
margin_right = 324.0
margin_bottom = 365.0
focus_mode = 0
theme = SubResource( 72 )
enabled_focus_mode = 0
text = "Pacientes"
align = 0

[node name="ButtonUser" type="Button" parent="."]
margin_left = 72.0
margin_top = 655.0
margin_right = 329.0
margin_bottom = 711.0
focus_mode = 0
theme = SubResource( 79 )
enabled_focus_mode = 0
text = "Usuário"
align = 0

[node name="ButtonSetings" type="Button" parent="."]
margin_left = 70.0
margin_top = 797.0
margin_right = 327.0
margin_bottom = 853.0
focus_mode = 0
theme = SubResource( 86 )
enabled_focus_mode = 0
text = "Ajustes"
align = 0

[node name="ButtonFAQ" type="Button" parent="."]
margin_left = 68.0
margin_top = 985.0
margin_right = 325.0
margin_bottom = 1041.0
focus_mode = 0
theme = SubResource( 93 )
enabled_focus_mode = 0
text = "F.A.Q "
align = 0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 359.0
margin_top = 158.0
margin_right = 1920.0
margin_bottom = 1079.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = 321.0
margin_top = 158.0
margin_right = 1913.0
margin_bottom = 1081.0
rect_pivot_offset = Vector2( 1065, 473 )
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="OptionButtondrawer" type="OptionButton" parent="CanvasLayer/ColorRect"]
margin_left = 610.0
margin_top = 95.0
margin_right = 966.0
margin_bottom = 235.0
theme = SubResource( 96 )

[node name="LineEditinfo" type="LineEdit" parent="CanvasLayer/ColorRect"]
margin_left = 598.0
margin_top = 522.0
margin_right = 990.0
margin_bottom = 655.0
theme = ExtResource( 7 )

[node name="LineEdithour" type="LineEdit" parent="CanvasLayer/ColorRect"]
margin_left = 471.0
margin_top = 308.0
margin_right = 752.0
margin_bottom = 441.0
theme = ExtResource( 7 )

[node name="LineEditminute" type="LineEdit" parent="CanvasLayer/ColorRect"]
margin_left = 828.0
margin_top = 308.0
margin_right = 1109.0
margin_bottom = 441.0
theme = ExtResource( 7 )

[node name="Button_add_agenda" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 603.0
margin_top = 736.0
margin_right = 984.0
margin_bottom = 830.0
theme = ExtResource( 6 )
text = "Anexar na agenda"

[node name="Button_exit_agenda" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 701.0
margin_top = 839.0
margin_right = 901.0
margin_bottom = 912.0
theme = ExtResource( 6 )
text = "Retornar"

[node name="Label" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 278.0
margin_top = 40.0
margin_right = 1305.0
margin_bottom = 96.0
theme = ExtResource( 5 )
text = "Selecione a gaveta de determinado medicamento:"

[node name="Label4" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 484.0
margin_top = 464.0
margin_right = 1104.0
margin_bottom = 520.0
theme = ExtResource( 5 )
text = "Digite a dosagem e quantidae:"

[node name="Label2" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 477.0
margin_top = 256.0
margin_right = 747.0
margin_bottom = 312.0
theme = ExtResource( 5 )
text = "Digite a Hora:"

[node name="Label3" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 798.0
margin_top = 256.0
margin_right = 1153.0
margin_bottom = 312.0
theme = ExtResource( 5 )
text = "Digite os Minutos:"

[node name="Label5" type="Label" parent="CanvasLayer/ColorRect"]
margin_left = 782.0
margin_top = 325.0
margin_right = 799.0
margin_bottom = 424.0
theme = ExtResource( 8 )
text = ":"

[node name="Label6" type="Label" parent="CanvasLayer/ColorRect"]
visible = false
margin_left = 581.0
margin_top = 680.0
margin_right = 626.0
margin_bottom = 734.0
theme = ExtResource( 9 )

[node name="Label7" type="Label" parent="CanvasLayer/ColorRect"]
visible = false
margin_left = 642.0
margin_top = 680.0
margin_right = 687.0
margin_bottom = 734.0
theme = ExtResource( 9 )

[node name="CanvasLayer3" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer3"]
margin_left = 321.0
margin_top = 158.0
margin_right = 1913.0
margin_bottom = 1081.0
rect_pivot_offset = Vector2( 1065, 473 )
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="OptionButtondraweredit" type="OptionButton" parent="CanvasLayer3/ColorRect"]
margin_left = 610.0
margin_top = 95.0
margin_right = 966.0
margin_bottom = 235.0
theme = SubResource( 96 )

[node name="LineEditinfoedit" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 598.0
margin_top = 522.0
margin_right = 990.0
margin_bottom = 655.0
theme = ExtResource( 7 )

[node name="LineEdithouredit" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 471.0
margin_top = 308.0
margin_right = 752.0
margin_bottom = 441.0
theme = ExtResource( 7 )

[node name="LineEditminuteedit" type="LineEdit" parent="CanvasLayer3/ColorRect"]
margin_left = 828.0
margin_top = 308.0
margin_right = 1109.0
margin_bottom = 441.0
theme = ExtResource( 7 )

[node name="Button_confirmedit_agenda" type="Button" parent="CanvasLayer3/ColorRect"]
margin_left = 603.0
margin_top = 736.0
margin_right = 984.0
margin_bottom = 830.0
theme = ExtResource( 6 )
text = "Atualizar agenda"

[node name="Button_exitedit_agenda" type="Button" parent="CanvasLayer3/ColorRect"]
margin_left = 701.0
margin_top = 839.0
margin_right = 901.0
margin_bottom = 912.0
theme = ExtResource( 6 )
text = "Retornar"

[node name="Label" type="Label" parent="CanvasLayer3/ColorRect"]
margin_left = 278.0
margin_top = 40.0
margin_right = 1305.0
margin_bottom = 96.0
theme = ExtResource( 5 )
text = "Selecione a gaveta de determinado medicamento:"

[node name="Label4" type="Label" parent="CanvasLayer3/ColorRect"]
margin_left = 484.0
margin_top = 464.0
margin_right = 1104.0
margin_bottom = 520.0
theme = ExtResource( 5 )
text = "Digite a dosagem e quantidae:"

[node name="Label2" type="Label" parent="CanvasLayer3/ColorRect"]
margin_left = 477.0
margin_top = 256.0
margin_right = 747.0
margin_bottom = 312.0
theme = ExtResource( 5 )
text = "Digite a Hora:"

[node name="Label3" type="Label" parent="CanvasLayer3/ColorRect"]
margin_left = 798.0
margin_top = 256.0
margin_right = 1153.0
margin_bottom = 312.0
theme = ExtResource( 5 )
text = "Digite os Minutos:"

[node name="Label5" type="Label" parent="CanvasLayer3/ColorRect"]
margin_left = 782.0
margin_top = 325.0
margin_right = 799.0
margin_bottom = 424.0
theme = ExtResource( 8 )
text = ":"

[node name="Label6" type="Label" parent="CanvasLayer3/ColorRect"]
visible = false
margin_left = 581.0
margin_top = 680.0
margin_right = 626.0
margin_bottom = 734.0
theme = ExtResource( 9 )

[node name="Label7" type="Label" parent="CanvasLayer3/ColorRect"]
visible = false
margin_left = 642.0
margin_top = 680.0
margin_right = 687.0
margin_bottom = 734.0
theme = ExtResource( 9 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer2"]
margin_left = 330.0
margin_top = 158.0
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.121569, 0.121569, 0.121569, 1 )

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer2/ColorRect"]
margin_left = 36.0
margin_top = 139.0
margin_right = 1550.0
margin_bottom = 772.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer2/ColorRect/ScrollContainer"]

[node name="Button_return" type="Button" parent="CanvasLayer2/ColorRect"]
margin_left = 839.0
margin_top = 780.0
margin_right = 1159.0
margin_bottom = 919.0
theme = ExtResource( 6 )
text = "Retornar"

[node name="Button_createagenda" type="Button" parent="CanvasLayer2/ColorRect"]
margin_left = 434.0
margin_top = 780.0
margin_right = 754.0
margin_bottom = 919.0
theme = ExtResource( 6 )
text = "Criar Agenda"

[node name="Label" type="Label" parent="CanvasLayer2/ColorRect"]
margin_left = 69.0
margin_top = 44.0
margin_right = 1355.0
margin_bottom = 103.0
theme = ExtResource( 8 )
text = "bfcfnfgnvn nhjyvhvh"

[node name="Buttonexit" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -643.0
margin_top = -86.0
margin_right = -4.0
theme = SubResource( 106 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -67.5
margin_top = 14.0
margin_right = 75.5
margin_bottom = 70.0
theme = ExtResource( 5 )

[connection signal="pressed" from="ButtonAgenda" to="." method="_on_ButtonAgenda_pressed"]
[connection signal="pressed" from="ButtonPatients" to="." method="_on_ButtonPatients_pressed"]
[connection signal="item_selected" from="CanvasLayer/ColorRect/OptionButtondrawer" to="." method="_on_OptionButtondrawer_item_selected"]
[connection signal="pressed" from="CanvasLayer/ColorRect/Button_add_agenda" to="." method="_on_Button_add_agenda_pressed"]
[connection signal="pressed" from="CanvasLayer/ColorRect/Button_exit_agenda" to="." method="_on_Button_exit_agenda_pressed"]
[connection signal="item_selected" from="CanvasLayer3/ColorRect/OptionButtondraweredit" to="." method="_on_OptionButtondraweredit_item_selected"]
[connection signal="pressed" from="CanvasLayer3/ColorRect/Button_confirmedit_agenda" to="." method="_on_Button_confirmedit_agenda_pressed"]
[connection signal="pressed" from="CanvasLayer3/ColorRect/Button_exitedit_agenda" to="." method="_on_Button_exitedit_agenda_pressed"]
[connection signal="pressed" from="CanvasLayer2/ColorRect/Button_return" to="." method="_on_Button_return_pressed"]
[connection signal="pressed" from="CanvasLayer2/ColorRect/Button_createagenda" to="." method="_on_Button_createagenda_pressed"]
[connection signal="pressed" from="Buttonexit" to="." method="_on_Buttonexit_pressed"]
